# libfaketime

./: .gitignore  .travis.yml  NEWS  README  README.OSX  TODO
src/: faketime.c  libfaketime.c
test/: Makefile.am  t_parser_1.c  testutil.h
